# python-scrapy

./: README.md  pyproject.toml
toscrape/toscrape/: items.py  loader.py
toscrape/toscrape/spiders/: typescrape_default.py  typescrape_js.py  typescrape_scroll.py
